sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: missing arguments for method swap in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
	swap Boolean=true
        ^AlgBubbleSort1:4: error: missing arguments for method swap in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
	while(swap){
              ^AlgBubbleSort1:5: error: reassignment to val
		swap=false
                    ^AlgBubbleSort1:9: error: reassignment to val
				swap=true
                                    ^